<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

   <LinearLayout
       android:id="@+id/content_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       app:layout_boxedEdges="all">

       <TextView
           android:id="@+id/time"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/hello_time"
           android:textSize="@dimen/titleSize"/>

       <TextView
           android:id="@+id/time_stamp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/hello_time_stamp"/>

       <TextView
           android:id="@+id/state"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textColor="#4CAF50"
           android:text="@string/hello_state"
           />

       <TextView
           android:id="@+id/update_rate"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textColor="#4CAF50"
           android:text="@string/hello_update_rate"
           />

       <TextView
           android:id="@+id/draw_count"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textColor="#4CAF50"
           android:text="@string/hello_draw_count"
           />

   </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>